--- a/webapp/public/css/style.css
+++ b/webapp/public/css/style.css
@@ -86,6 +86,12 @@ ol {
   Helper CSS
 -----------------------*/
 
+.featured-products{
+	width: 280px;
+	height: 280px;
+	border-radius: 2em;
+}
+
 .section-title {
 	text-align: center;
 }
