--- a/webapp/public/css/style.css
+++ b/webapp/public/css/style.css
@@ -414,7 +414,7 @@ ol {
 }
 
 .main-navbar {
-	background: #f09307;
+	background: #ffc107;
 }
 
 .slicknav_menu {
@@ -513,7 +513,7 @@ ol {
 
 .hero-slider .hs-item {
 	position: relative;
-	height: 450px;
+	height: 400px;
 }
 
 .hero-slider .hs-item span {
