--- a/webapp/public/css/style.css
+++ b/webapp/public/css/style.css
@@ -414,7 +414,7 @@ ol {
 }
 
 .main-navbar {
-	background: #ffc107;
+	background: #f8d881;
 }
 
 .slicknav_menu {
@@ -749,7 +749,7 @@ ol {
 }
 
 .feature:nth-child(2) {
-	background: #f51167;
+	background: #f8d881;
 }
 
 .feature:nth-child(2) h2 {
