--- a/webapp/public/css/style.css
+++ b/webapp/public/css/style.css
@@ -749,7 +749,7 @@ ol {
 }
 
 .feature:nth-child(2) {
-	background: #f8d881;
+	background: #fe6a00;
 }
 
 .feature:nth-child(2) h2 {
@@ -1120,7 +1120,7 @@ ol {
 
 .fw-latest-post-widget .lp-content .readmore {
 	font-size: 12px;
-	color: #f51167;
+	color: #fe6a00;
 }
 
 .contact-widget .con-info span {
@@ -1209,7 +1209,7 @@ ol {
 
 .page-top-info {
 	background: #f8f7f7;
-	padding: 60px 0 70px;
+	padding: 30px 0 40px;
 }
 
 .page-top-info h4 {
