--- a/webapp/public/css/style.css
+++ b/webapp/public/css/style.css
@@ -10,8 +10,8 @@
 /* Template default CSS
 /*----------------------------------------*/
 .menu-area{background: #f8d881}
-.dropdown-menu{padding:0;margin:0;border:0 solid transition!important;border:0 solid rgba(0,0,0,.15);border-radius:0;-webkit-box-shadow:none!important;box-shadow:none!important}
-.mainmenu a, .navbar-default .navbar-nav > li > a, .mainmenu ul li a , .navbar-expand-lg .navbar-nav .nav-link{color:#000;font-size:16px;text-transform:capitalize;padding:16px 15px;font-family:'Roboto',sans-serif;display: block !important;}
+.dropdown-menu{padding:0;margin:0;border:0 solid transition!important;border:0 solid #f8d881;border-radius:0;-webkit-box-shadow:none!important;box-shadow:none!important}
+.mainmenu a, .navbar-default .navbar-nav > li > a, .mainmenu ul li a , .navbar-expand-lg .navbar-nav .nav-link{color:#000;font-size:16px;text-transform:capitalize;padding:16px 15px;font-family:'Josefin Sans',sans-serif;display: block !important;}
 .mainmenu .active a,.mainmenu .active a:focus,.mainmenu .active a:hover,.mainmenu li a:hover,.mainmenu li a:focus ,.navbar-default .navbar-nav>.show>a, .navbar-default .navbar-nav>.show>a:focus, .navbar-default .navbar-nav>.show>a:hover{color: #000;background: #fff;outline: 0;}
 /*==========Sub Menu=v==========*/
 .mainmenu .collapse ul > li:hover > a{background: #f8d881;color:#000}
