--- a/webapp/public/css/style.css
+++ b/webapp/public/css/style.css
@@ -86,6 +86,12 @@ h6 {
 	font-size: 16px;
 }
 
+.img-blog{
+	width: 250px;
+	height: 250px;
+	border-radius: 0.4em;
+}
+
 p {
 	font-size: 14px;
 	color: #585858;
